@@ -31,6 +31,12 @@
 #include <string.h>
 #include <errno.h>
 extern int errno;
+#include <unistd.h>
+#ifdef _WIN32
+/* FIXME: Use gnulib ftruncate module once it is ported to Win32. */
+#include <io.h>
+#define ftruncate _chsize
+#endif
 
 #include "gettext.h"
 #include "xalloc.h"
@@ -41,14 +47,11 @@ extern int errno;
 #include "os_env.h"
 
 
-/* The timeout for locking the UIDLs file, in seconds. Wait longer when trying
- * to lock for writing, because if we fail to write UIDs, then the user might 
- * get lots of mails twice. */
-#define UIDLS_LOCK_TIMEOUT_READ		10
-#define UIDLS_LOCK_TIMEOUT_WRITE	40
+/* The timeout for locking the UIDLs file, in seconds. */
+#define UIDLS_LOCK_TIMEOUT	10
 
 /* A line from an UIDLs file must fit into a buffer of this size: */
-#define UIDLS_LINEBUFSIZE 501
+#define UIDLS_LINEBUFSIZE	501
 
 
 /*
@@ -145,9 +148,9 @@ int _uidls_qsort_strcmp(const void *a, const void *b)
  * see uidls.h
  */
 
-int uidls_read(const char *filename, list_t **uidl_list, char **errstr)
+int uidls_read(const char *filename, FILE **uidls_file, list_t **uidl_list, 
+	char **errstr)
 {
-    FILE *f;
     char line[UIDLS_LINEBUFSIZE];
     long linecounter;
     uidl_t *uidl;
@@ -163,24 +166,29 @@ int uidls_read(const char *filename, list_t **uidl_list, char **errstr)
 
     *uidl_list = list_new();
 
-    if (!(f = fopen(filename, "r")))
+    if (!(*uidls_file = fopen(filename, "r+")))
     {
 	/* treat a nonexistant file as an empty file */
+	if (!(*uidls_file = fopen(filename, "w+")))
+	{
+	    *errstr = xasprintf("%s: %s", filename, strerror(errno));
+	    return UIDLS_EIO;
+	}
 	return UIDLS_EOK;
     }
-    if ((e = lock_file(f, OSENV_LOCK_READ, UIDLS_LOCK_TIMEOUT_READ)) != 0)
+    if ((e = lock_file(*uidls_file, OSENV_LOCK_WRITE, UIDLS_LOCK_TIMEOUT)) != 0)
     {
 	if (e == 1)
 	{
 	    *errstr = xasprintf(_("cannot lock %s (tried for %d seconds): %s"), 
-		    filename, UIDLS_LOCK_TIMEOUT_READ, strerror(errno));
+		    filename, UIDLS_LOCK_TIMEOUT, strerror(errno));
 	}
 	else
 	{
 	    *errstr = xasprintf(_("cannot lock %s: %s"), 
 		    filename, strerror(errno));
 	}
-	fclose(f);
+	fclose(*uidls_file);
 	return UIDLS_EIO;
     }
 
@@ -188,7 +196,7 @@ int uidls_read(const char *filename, list_t **uidl_list, char **errstr)
     uidl = NULL;
     linecounter = 0;
     e = UIDLS_EOK;
-    while (fgets(line, (int)sizeof(line), f))
+    while (fgets(line, (int)sizeof(line), *uidls_file))
     {
 	linecounter++;
 	if ((p = strchr(line, '\n')))
@@ -307,14 +315,14 @@ int uidls_read(const char *filename, list_t **uidl_list, char **errstr)
     
     if (e != UIDLS_EOK)
     {
-	(void)fclose(f);
+	(void)fclose(*uidls_file);
 	uidl_free(uidl);
 	list_xfree(*uidl_list, uidl_free);
      	return e;
     }
-    else if (ferror(f))
+    else if (ferror(*uidls_file))
     {
-	(void)fclose(f);
+	(void)fclose(*uidls_file);
 	*errstr = xasprintf(_("%s: input error"), filename);
 	uidl_free(uidl);
 	list_xfree(*uidl_list, uidl_free);
@@ -322,7 +330,6 @@ int uidls_read(const char *filename, list_t **uidl_list, char **errstr)
     }
     else
     {
-	(void)fclose(f);
 	return UIDLS_EOK;
     }
 }
@@ -334,35 +341,22 @@ int uidls_read(const char *filename, list_t **uidl_list, char **errstr)
  * see uidls.h
  */
 
-int uidls_write(const char *filename, list_t *uidl_list, char **errstr)
+int uidls_write(const char *filename, FILE *uidls_file, list_t *uidl_list, 
+	char **errstr)
 {
-    FILE *f;
     list_t *lp;
     uidl_t *uidl;
     long i;
     int error;
 
-    if (!(f = fopen(filename, "w")))
+    if (fseek(uidls_file, 0, SEEK_SET) != 0 
+	    || ftruncate(fileno(uidls_file), 0) != 0)
     {
 	*errstr = xasprintf("%s: %s", filename, strerror(errno));
-	return UIDLS_EIO;
+	return UIDLS_EOK;
     }
-    if ((error = lock_file(f, OSENV_LOCK_WRITE, UIDLS_LOCK_TIMEOUT_WRITE)) != 0)
-    {
-	if (error == 1)
-	{
-	    *errstr = xasprintf(_("cannot lock %s (tried for %d seconds): %s"), 
-		    filename, UIDLS_LOCK_TIMEOUT_WRITE, strerror(errno));
-	}
-	else
-	{
-	    *errstr = xasprintf(_("cannot lock %s: %s"), 
-		    filename, strerror(errno));
-	}
-	return UIDLS_EIO;
-    }
-    
-    error = (fprintf(f, 
+
+    error = (fprintf(uidls_file, 
 		"# This file was generated by %s version %s.\n"
 		"#\n"
 		"# Lines starting with a space begin a new UID list and have\n"
@@ -379,14 +373,14 @@ int uidls_write(const char *filename, list_t *uidl_list, char **errstr)
 	uidl = lp->data;
 	if (uidl->n > 0)
 	{
-	    error = (fprintf(f, " %ld %s %s\n", uidl->n, uidl->hostname, 
-			uidl->user) < 0);
+	    error = (fprintf(uidls_file, " %ld %s %s\n", 
+			uidl->n, uidl->hostname, uidl->user) < 0);
 	    qsort(uidl->uidv, (size_t)uidl->n, sizeof(char *), 
 		    _uidls_qsort_strcmp);
 	    for (i = 0; !error && i < uidl->n; i++)
 	    {
-		error = (fputs(uidl->uidv[i], f) == EOF 
-			|| fputc((unsigned char)'\n', f) == EOF);
+		error = (fputs(uidl->uidv[i], uidls_file) == EOF 
+			|| fputc((unsigned char)'\n', uidls_file) == EOF);
 	    }
 	}
     }
@@ -394,12 +388,12 @@ int uidls_write(const char *filename, list_t *uidl_list, char **errstr)
     if (error)
     {
 	*errstr = xasprintf("%s: %s", filename, strerror(errno));
-	(void)fclose(f);
+	(void)fclose(uidls_file);
 	return UIDLS_EIO;
     }
     else
     {
-	(void)fclose(f);
+	(void)fclose(uidls_file);
 	return UIDLS_EOK;
     }
 }
